FileUploader - Integrates FileInputOverlay and FileInput Flash into one file, where one object can be created, and uses Flash or degrades to HTML. - Added upload progress from Flash - Added Multi-File upload for HTML (reopening the dialog and adding to the list) - Fixed an IE bug for HTML button - Fixed HTML button alignment on scroll - Greatly improved the test.
git-svn-id: http://svn.dojotoolkit.org/src/dojox/trunk@14754 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/form/resources/FileInput.css
+++ b/form/resources/FileInput.css
@@ -7,7 +7,7 @@
 .dijitFileInputReal {
 	position:absolute;
 	z-index:2;
-	opacity:.7;
+	opacity:0;
 	filter:alpha(opacity:0);
 	cursor:pointer;
 }
